samples/_failures_safe/1761427002_14e906_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_592c5617.c: In function ‘main’:
./samples/SAFE/__tmp_592c5617.c:169:12: error: missing terminating " character
  169 |     printf("Tokens:\n
      |            ^~~~~~~~~~
./samples/SAFE/__tmp_592c5617.c:169:5: error: expected expression at end of input
  169 |     printf("Tokens:\n
      |     ^~~~~~
./samples/SAFE/__tmp_592c5617.c:169:5: error: expected declaration or statement at end of input
